# anafpy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  DESIGN.md  INSTALL.md  LICENSE  NOTICE  PLAN-declaratii.md  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: design.md  index.md
docs/anaf-reference/: README.md
docs/anaf-reference/_sources/: README.md  limiteApeluriAPI.txt
docs/anaf-reference/_sources/decl-portal/: app-welcome.html  login-choreography-verbose.txt  logon-page.html  replay-plain-get.headers.txt  root-redirect.headers.txt  upload-error-nofile.html  upload-response-d406t.html
docs/anaf-reference/_sources/efactura-swagger/: descarcare.html  listamesaje.html  staremesaj.html  upload.html  validare.html  validaresemnatura.html  xmltopdf.html
docs/anaf-reference/_sources/etransport-swagger/: info_transportatori.html  lista.html  stare.html  upload_param.html
docs/anaf-reference/_sources/servicii-web/: docV1.txt  doc_WS_Async_V8.txt  doc_WS_Bilant_V1.txt  doc_WS_V9.txt  documentatie_SWRARG_v2.txt  index_cult_v2.html  servicii_asincron.html  servicii_sincron.html  servicii_web.html
docs/anaf-reference/_sources/stared112/: form-page.html  recipisa-empty.headers.txt  recipisa-found.headers.txt  result-found.headers.txt  result-found.html  result-notfound.headers.txt
docs/anaf-reference/declaratii/: duk.md  portal-upload.md  stared112.md
docs/anaf-reference/declaratii/forms/: METHOD.md  README.md  d100-nomenclatoare.md  d100.md  d101.md  d112-nomenclatoare.md  d112.md  d205.md  d212.md  d300.md  d301.md  d390.md  d394.md  d406.md  d700.md  d710.md
docs/anaf-reference/efactura/: api.md
docs/anaf-reference/etransport/: api.md
docs/anaf-reference/oauth/: authentication.md
docs/anaf-reference/public/: api.md
docs/anaf-reference/spv/: api.md
docs/api/: auth.md  authoring.md  efactura.md  etransport.md  exceptions.md  public.md  spv.md
docs/mcp/: setup.md  setup.ro.md  skills.md  tools.md
docs/stylesheets/: extra.css
evals/: spv.md
plugins/anafpy-connector-test/: .mcp.json  README.md
plugins/anafpy-connector-test/.claude-plugin/: plugin.json
plugins/anafpy-setup/.claude-plugin/: plugin.json
plugins/anafpy-setup/skills/anafpy-setup/: SKILL.md  macos.md  windows.md
plugins/anafpy-workflows/: README.md
plugins/anafpy-workflows/.claude-plugin/: plugin.json
plugins/anafpy-workflows/skills/declaratie-prepare/: SKILL.md
plugins/anafpy-workflows/skills/etransport-declare/: SKILL.md
plugins/anafpy-workflows/skills/personal-income-summary/: SKILL.md
schemas/: README.md
scripts/: compile_schematron.py  generate_efactura_codelists.py  generate_etransport.py  generate_ubl.py
skills/declaratie-compose/: SKILL.md
skills/declaratie-prepare/: SKILL.md
skills/etransport-declare/: SKILL.md
spikes/: spv_macos_curl.sh  spv_macos_keychain.py  spv_windows_curl.ps1
src/anafpy/: __init__.py  exceptions.py  validation.py
src/anafpy/_transport/: __init__.py  base.py  curl.py  http.py  subprocess.py
src/anafpy/auth/: __init__.py  callback.py  models.py  oauth.py  provider.py  store.py  tlscert.py
src/anafpy/cli/: __init__.py  main.py
src/anafpy/declaratii/: __init__.py  _html.py  duk.py  dukdist.py  models.py  nr_evid.py  pdfsign.py  signing.py  status.py  upload.py
src/anafpy/efactura/: README.md  __init__.py  client.py  models.py  validator.py
src/anafpy/efactura/authoring/: __init__.py  _codelists.py  build.py  codes.py  models.py  read.py  rules.py
src/anafpy/efactura/ubl/common/: __init__.py  ccts_cct_schema_module_2_1.py  ubl_common_aggregate_components_2_1.py  ubl_common_basic_components_2_1.py  ubl_common_extension_components_2_1.py  ubl_common_signature_components_2_1.py  ubl_extension_content_data_type_2_1.py  ubl_signature_aggregate_components_2_1.py  ubl_signature_basic_components_2_1.py  ubl_unqualified_data_types_2_1.py  ubl_xad_esv132_2_1.py  (+2 more)
src/anafpy/etransport/: __init__.py  client.py  models.py  validator.py
src/anafpy/etransport/schema/: __init__.py  schema_etr_v2_20230126.py
src/anafpy/mcp/: __init__.py  __main__.py  app.py  artifacts.py  config.py  context.py  documents.py  gate.py  mapping.py  models.py  nomenclatures.py  prompts.py  reference.py  server.py  skills.py  tokens.py  unitcodes.py
src/anafpy/mcp/declaratii/: __init__.py  models.py  tools.py
src/anafpy/mcp/efactura/: __init__.py  documents.py  models.py  tools.py
src/anafpy/mcp/etransport/: __init__.py  models.py  nomenclature.py  tools.py
src/anafpy/mcp/public/: __init__.py  tools.py
src/anafpy/mcp/server/: __init__.py  _shared.py  app.py  efactura.py  etransport.py  prompts.py  public.py  resources.py  spv.py
src/anafpy/mcp/spv/: __init__.py  nomenclature.py  tools.py
src/anafpy/public/: __init__.py  client.py  models.py
src/anafpy/spv/: __init__.py  auth.py  bootstrap.py  certs.py  client.py  models.py  session.py
tests/: _authoring.py  _wire.py  conftest.py  test_artifacts.py  test_auth.py  test_authoring_models.py  test_authoring_roundtrip.py  test_authoring_rules.py  test_cli.py  test_declaratii_duk.py  test_declaratii_dukdist.py  test_declaratii_live.py  test_declaratii_nr_evid.py  test_declaratii_pdfsign.py  test_declaratii_signing.py  test_declaratii_status.py  test_declaratii_upload.py  test_declaratii_upload_live.py  test_efactura_client.py  test_efactura_read.py  test_efactura_roundtrip_live.py  test_etransport_client.py  test_etransport_read.py  test_etransport_roundtrip_live.py  test_etransport_schema.py  test_mcp_declaratii.py  test_mcp_mapping.py  test_mcp_server.py  test_mcp_spv.py  test_mcp_tokens.py  test_oauth_live.py  test_public_client.py  test_public_exports.py  test_public_live.py  test_spv_auth.py  test_spv_bootstrap.py  test_spv_certs.py  test_spv_client.py  test_spv_live.py  test_spv_models.py  (+5 more)
tests/fixtures/: tls_test_cert.pem  tls_test_key.pem
tests/fixtures/declaratii/: d406t-minimal.xml
tests/fixtures/stared112/: result-invalid-input.html  result-notfound.html
(+5 files in other folders)
