[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anafpy"
version = "0.0.1"
description = "Typed Python clients for Romania's ANAF e-Factura and e-Transport services."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Robert Malai" }]
keywords = ["anaf", "e-factura", "e-transport", "romania", "einvoicing", "ubl", "cius-ro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "xsdata-pydantic>=24.5",
    "tenacity>=8.3",
]

[project.optional-dependencies]
# Local Schematron pre-validation (EN 16931 + CIUS-RO / e-Transport rules).
validation = ["saxonche>=12.5"]
# MCP server exposing the clients as Cowork skills.
mcp = ["mcp>=1.2"]

[project.scripts]
anafpy = "anafpy.cli.main:main"

[project.urls]
Homepage = "https://github.com/robertmalai/anafpy"
Documentation = "https://github.com/robertmalai/anafpy/tree/main/docs"
Issues = "https://github.com/robertmalai/anafpy/issues"

# PEP 735 dependency groups (dev-only; installed via `uv sync`).
[dependency-groups]
test = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
lint = ["ruff>=0.5", "mypy>=1.10"]
docs = ["markitdown>=0.0.1"]
dev = [{ include-group = "test" }, { include-group = "lint" }, { include-group = "docs" }]

[tool.hatch.build.targets.wheel]
packages = ["src/anafpy"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
# Generated UBL/e-Transport model packages are excluded from strict typing.
exclude = ['(^|/)(ubl|schema)/']

[[tool.mypy.overrides]]
module = ["xsdata_pydantic.*", "saxonche.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
