[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anafpy"
version = "0.0.1"
description = "Typed Python clients for Romania's ANAF web services: e-Factura, e-Transport, and the public no-auth registries."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Robert Malai" }]
keywords = ["anaf", "e-factura", "e-transport", "romania", "einvoicing", "ubl", "cius-ro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    # >=2.9 for PEP 695 generic BaseModels (anafpy.public.models.RegistryLookup).
    "pydantic>=2.9",
    "xsdata-pydantic>=24.5",
    "tenacity>=8.3",
]

[project.optional-dependencies]
# MCP server exposing the clients as Cowork skills.
mcp = ["mcp>=1.2", "pydantic-settings>=2.4"]

[project.scripts]
anafpy = "anafpy.cli.main:main"
# Runs the MCP server over stdio; requires the anafpy[mcp] extra.
anafpy-mcp = "anafpy.mcp.server:main"

[project.urls]
Homepage = "https://github.com/robertmalai/anafpy"
Documentation = "https://github.com/robertmalai/anafpy/tree/main/docs"
Issues = "https://github.com/robertmalai/anafpy/issues"

# PEP 735 dependency groups (dev-only; installed via `uv sync`).
[dependency-groups]
test = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21"]
lint = ["ruff>=0.5", "mypy>=1.10"]
docs = ["markitdown>=0.0.1"]
# Code generation of UBL / e-Transport models from vendored XSDs (dev-only).
# xsdata is pinned to the 24.x line that the xsdata-pydantic plugin targets; newer
# xsdata core drifts from the plugin and emits invalid Pydantic field definitions.
codegen = ["xsdata-pydantic>=24.5", "xsdata[cli]>=24.5,<25"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "codegen" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/anafpy"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
# Generated model packages are formatted by their regeneration scripts, not linted.
extend-exclude = ["src/anafpy/efactura/ubl", "src/anafpy/etransport/schema"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
# Generated UBL/e-Transport model packages are excluded from strict typing.
exclude = ['(^|/)(ubl|schema)/']

[tool.pyright]
# Mirrors the ruff/mypy stance for Pylance users: the generated model packages are
# not analysable (xsdata-pydantic's `field()` is not a Pydantic field specifier).
exclude = [
    "**/__pycache__",
    ".venv",
    "src/anafpy/efactura/ubl",
    "src/anafpy/etransport/schema",
]

[[tool.mypy.overrides]]
module = ["xsdata_pydantic.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: exercises real ANAF endpoints — public (no-auth) and authenticated TEST (needs .env + `anafpy auth login`); opt in with ANAFPY_LIVE=1",
]
