[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anafpy"
version = "0.4.3"
description = "Typed Python clients for Romania's ANAF web services: e-Factura, e-Transport, and the public no-auth registries."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Robert Malai" }]
keywords = ["anaf", "e-Factura", "e-Transport", "romania", "einvoicing", "ubl", "cius-ro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    # >=2.9 for PEP 695 generic BaseModels (anafpy.public.models.RegistryLookup).
    "pydantic>=2.9",
    "xsdata-pydantic>=24.5",
    "tenacity>=8.3",
    # Unverified `exp` reads to schedule token refresh (verification is ANAF's job).
    "pyjwt>=2.8",
    # OS-credential-store token backend (macOS Keychain, Windows Credential Manager,
    # Linux Secret Service/KWallet) — the DEFAULT TokenStore backend since 2026-07-05.
    "keyring>=25",
    # IANA tz database for ZoneInfo("Europe/Bucharest") — ANAF-semantic "today"/"now"
    # defaults are computed in Romania's timezone; Windows has no system tz database.
    "tzdata; sys_platform == 'win32'",
    # HTML scraping (CSS/XPath selectors over lxml) for ANAF's HTML-only surfaces:
    # StareD112 filing status today, the declaration-upload portal next (both have
    # no API). py.typed since 1.8, so mypy --strict needs no stubs.
    "parsel>=1.9",
    # Type-hint-driven CLI (replaced argparse 2026-07-18): async commands run
    # natively, help text comes from the Google-style docstrings, env-var
    # fallbacks live on the Parameter annotations.
    "cyclopts>=3.14",
]

[project.optional-dependencies]
# MCP server exposing the clients as Cowork skills.
# mcp>=1.10: display `title` on tools (spec 2025-06-18).
# python-frontmatter>=1.3: skills/*/SKILL.md -> MCP prompts (1.3 ships py.typed).
mcp = ["mcp>=1.10", "pydantic-settings>=2.4", "python-frontmatter>=1.3"]
# Declaration signing: pyHanko embeds the qualified signature into the DUK-rendered
# PDF (the raw RSA op is delegated to the OS via anafpy.declaratii.signing — no key
# material here). asn1crypto comes in transitively via pyHanko; pinned here because
# pdfsign uses it directly for the leaf/AIA chain.
declaratii = ["pyhanko>=0.25", "asn1crypto>=1.5"]

[project.scripts]
anafpy = "anafpy.cli.main:main"
# Runs the MCP server over stdio; requires the anafpy[mcp] extra.
anafpy-mcp = "anafpy.mcp:main"

[project.urls]
Homepage = "https://github.com/robert-malai/anafpy"
Documentation = "https://anafpy.readthedocs.io"
Issues = "https://github.com/robert-malai/anafpy/issues"

# PEP 735 dependency groups (dev-only; installed via `uv sync`).
[dependency-groups]
# types-jsonschema: jsonschema comes in via the mcp SDK; the MCP tests use it to
# check tool output against the declared schema, and mypy strict wants its stubs.
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "types-jsonschema>=4.21",
]
lint = ["ruff>=0.5", "mypy>=1.10"]
# markitdown: compiling docs/anaf-reference from ANAF's PDFs/HTML sources.
# mkdocs-material + mkdocstrings: the documentation site (Read the Docs).
docs = ["markitdown>=0.0.1", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.27"]
# Code generation of UBL / e-Transport models from vendored XSDs (dev-only).
# xsdata is pinned to the 24.x line that the xsdata-pydantic plugin targets; newer
# xsdata core drifts from the plugin and emits invalid Pydantic field definitions.
codegen = ["xsdata-pydantic>=24.5", "xsdata[cli]>=24.5,<25"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "codegen" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/anafpy"]
# The compiled ANAF reference (anafref:// MCP resources) and the workflow skills
# (MCP prompts) ride inside the wheel so a PyPI install serves them too; the
# repo trees stay the single source (docs/ is also the MkDocs tree, plugins/ the
# Cowork plugin) and the copy happens only at build time. reference.py/prompts.py
# fall back to these packaged copies when no repo checkout is present.
# force-include bypasses exclude patterns, so the reference's curated subtrees
# are enumerated here to keep the raw _sources/ captures (3.5 MB) out of the
# wheel; test_mcp_server.py's wheel-map tripwire fails when a new service dir
# appears in docs/anaf-reference/ without a mapping below.
exclude = ["**/.DS_Store"]

[tool.hatch.build.targets.wheel.force-include]
"docs/anaf-reference/README.md" = "anafpy/mcp/_reference/README.md"
"docs/anaf-reference/declaratii" = "anafpy/mcp/_reference/declaratii"
"docs/anaf-reference/efactura" = "anafpy/mcp/_reference/efactura"
"docs/anaf-reference/etransport" = "anafpy/mcp/_reference/etransport"
"docs/anaf-reference/oauth" = "anafpy/mcp/_reference/oauth"
"docs/anaf-reference/public" = "anafpy/mcp/_reference/public"
"docs/anaf-reference/spv" = "anafpy/mcp/_reference/spv"
"plugins/anafpy-workflows/skills" = "anafpy/mcp/_skills"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
# Generated model packages are formatted by their regeneration scripts, not linted.
extend-exclude = ["src/anafpy/efactura/ubl", "src/anafpy/etransport/schema"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
# Generated UBL/e-Transport model packages are excluded from strict typing.
exclude = ['(^|/)(ubl|schema)/']
# pyHanko ships py.typed but leaves many pdf_utils constructors unannotated; the
# declaration signer (pdfsign) and its tests call them. Exempt calls INTO pyHanko
# from the strict no-untyped-call rule without loosening our own code.
untyped_calls_exclude = ["pyhanko"]

[tool.pyright]
# Mirrors the ruff/mypy stance for Pylance users: the generated model packages are
# not analysable (xsdata-pydantic's `field()` is not a Pydantic field specifier).
exclude = [
    "**/__pycache__",
    ".venv",
    "src/anafpy/efactura/ubl",
    "src/anafpy/etransport/schema",
]

[[tool.mypy.overrides]]
module = ["xsdata_pydantic.*", "respx.*", "asn1crypto.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["anafpy"]
# Generated model packages are excluded from coverage like from the other gates;
# _codelists.py stays in (gate-clean and exercised by the authoring rules).
omit = [
    "*/anafpy/efactura/ubl/*",
    "*/anafpy/etransport/schema/*",
]
# CI merges reports from ubuntu/macos/windows legs on Codecov; keep paths portable.
relative_files = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: exercises real ANAF endpoints — public (no-auth) and authenticated TEST (needs .env + `anafpy auth login`); opt in with ANAFPY_LIVE=1",
]
